--- a/2 - multi-column/index.html
+++ b/2 - multi-column/index.html
@@ -1,12 +1,63 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Multi Column Blog Layout</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Multi Column Blog Layout</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Turystyka jest ekstra!</h1>
+    </header>
+
+    <main class="grid-container">
+      <article class="featured">
+        <img src="img/1.png" alt="featured img" />
+        <div>
+          <h2>Baloon magic</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia soluta odit veritatis impedit, dolores
+            natus quia velit ratione cupiditate neque assumenda hic voluptatum at, eveniet consequuntur autem, incidunt
+            temporibus? Ex culpa amet consequuntur quos at aspernatur totam iste est tempore minima libero ea fugit,
+            corporis numquam cumque ullam harum praesentium dicta nobis ipsa qui vitae. Illo molestiae voluptatum
+            dolores laudantium quas enim dolor exercitationem fuga, dignissimos porro corrupti repellendus sapiente.
+            Sequi voluptatibus accusamus unde eius eum! Atque aperiam, pariatur praesentium excepturi qui corrupti
+            quaerat fuga, magni sunt facilis dignissimos. Quod suscipit a obcaecati, nam ad pariatur distinctio aliquam
+            corporis impedit.
+          </p>
+        </div>
+      </article>
+      <article>
+        <img src="img/1.png" alt="article img" />
+        <div>
+          <h3>Baloon magic</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit maiores vitae necessitatibus fugit impedit
+            suscipit sapiente dolores earum, hic aperiam?
+          </p>
+        </div>
+      </article>
+      <article>
+        <img src="img/2.png" alt="article img" />
+        <div>
+          <h3>Road to freedom</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit maiores vitae necessitatibus fugit impedit
+            suscipit sapiente dolores earum, hic aperiam?
+          </p>
+        </div>
+      </article>
+      <article>
+        <img src="img/3.png" alt="article img" />
+        <div>
+          <h3>Road to whatever</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit maiores vitae necessitatibus fugit impedit
+            suscipit sapiente dolores earum, hic aperiam?
+          </p>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
