--- a/3 - holy-grail/index.html
+++ b/3 - holy-grail/index.html
@@ -1,12 +1,60 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Holy Grail Layout</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Holy Grail Layout</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="grid-container">
+      <header>
+        <h1>The Fog Wall</h1>
+      </header>
+      <nav>
+        <p>Categories</p>
+        <li>World</li>
+        <li>Film</li>
+        <li>Cinema</li>
+        <li>Books</li>
+        <li>Elo</li>
+        <li>Elo2</li>
+      </nav>
+      <article>
+        <h2>The heading</h2>
+        <img src="./img/banner.png" alt="'banner img" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem doloremque nihil quaerat illo minus deserunt
+          maxime nam dolore fugiat ipsum suscipit assumenda ut animi enim architecto qui, et quia natus repellendus nisi
+          nobis aliquid modi? Sit non assumenda cumque magni, saepe, obcaecati deleniti provident suscipit vel sunt at
+          dicta aut!
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem doloremque nihil quaerat illo minus deserunt
+          maxime nam dolore fugiat ipsum suscipit assumenda ut animi enim architecto qui, et quia natus repellendus nisi
+          nobis aliquid modi? Sit non assumenda cumque magni, saepe, obcaecati deleniti provident suscipit vel sunt at
+          dicta aut!
+        </p>
+      </article>
+      <aside>
+        <ul>
+          <li>
+            <p><strong>Published on:</strong></p>
+            <p>May 6th 2022</p>
+          </li>
+          <li>
+            <p><strong>In the category:</strong></p>
+            <p>Games & consoles</p>
+          </li>
+          <li>
+            <p><strong>Written by:</strong></p>
+            <p>Mario</p>
+          </li>
+        </ul>
+      </aside>
+      <footer>
+        <p>Copyright Blabla 2022</p>
+      </footer>
+    </div>
+  </body>
 </html>
